[project]
name = "speak-when-done"
version = "0.1.0"
description = "Text-to-speech with automatic temp file handling, plus MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
speak_when_done = "speak_when_done.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
